fix(security): resolve hardcoded CORS origins using property injection